<?xml version="1.0"?>
<package format="2">
  <name>radar_deqing2proj</name>
  <version>0.0.0</version>
  <description>The demo package</description>
  <maintainer email="pc@todo.todo">pc</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>radar_msgs</build_depend>
  <build_depend>log_msgs</build_depend>



  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>radar_msgs</build_export_depend>
  <build_export_depend>log_msgs</build_export_depend>


  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>radar_msgs</exec_depend>
  <exec_depend>log_msgs</exec_depend>


  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
   <exec_depend>message_generation</exec_depend>

  <build_depend>rviz</build_depend>
  <build_export_depend>rviz</build_export_depend>
  <exec_depend>rviz</exec_depend>
 
  <build_depend>message_runtime</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>


  </export>
</package>
